<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">tipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="bill">Bill</string>
    <string name="tenPercent">10%</string>
    <string name="fiftenPercent">15%</string>
    <string name="eightenPercent">18%</string>
    <string name="total">Total</string>
    <string name="dollarSign">$</string>
    <string name="percent">%</string>

</resources>
