<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TipCalculatorActivity" >

    <EditText
        android:id="@+id/bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/bill"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/dollarSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bill"
        android:layout_toLeftOf="@+id/bill"
        android:text="@string/dollarSign" />
    
     <TextView
         android:id="@+id/seekbarProgress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/bill"
         android:layout_toRightOf="@+id/bill"
         android:hint="@string/percent" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/bill"
        android:layout_marginTop="26dp" />

    <Button
        android:id="@+id/fifteenPercentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:onClick="buttonClick"
        android:tag="15"
        android:text="@string/fiftenPercent" />

    <Button
        android:id="@+id/tenPercentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar"
        android:layout_alignBaseline="@+id/fifteenPercentButton"
        android:layout_marginRight="20dp"
        android:layout_toLeftOf="@+id/fifteenPercentButton"
        android:onClick="buttonClick"
        android:tag="10"
        android:text="@string/tenPercent" />

    <Button
        android:id="@+id/eightenPercentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar"
        android:layout_alignBaseline="@+id/fifteenPercentButton"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/fifteenPercentButton"
        android:onClick="buttonClick"
        android:tag="18"
        android:text="@string/eightenPercent" />

    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:textSize="20sp"
        android:hint="@string/total" />

</RelativeLayout>
